# ROS-Cashier-System

./: README.md
cashier/: CMakeLists.txt  package.xml
cashier/msg/: Bill.msg
cashier/src/: printer_node.py  publisher_node.py  subscriber_node.py  update_parameters_server.py
cashier/srv/: UpdateParameters.srv
